--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 spring:
   datasource:
-    hikari:
-      jdbc-url: jdbc:mysql:locahost:3306/work-forces?createDatabaseIfNotExist=true
+      url: jdbc:mysql://localhost:3306/work-forces?createDatabaseIfNotExist=true
       password:
       username: root
       driver-class-name: com.mysql.cj.jdbc.Driver
