fix the logs configuration, by adding the file logback.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jooq.sql-dialect=org.hibernate.dialect.MySQL5Dialect
 
 spring.jpa.show-sql=false
+
+logging.level.root=WARN
